Prevent subpart links from extending too far, fix spacing

--- a/regulations/static/regulations/css/main.css
+++ b/regulations/static/regulations/css/main.css
@@ -15345,9 +15345,11 @@ ul.table-of-contents {
 ul.table-of-contents li {
   list-style: none;
   color: #5B616B;
+  margin: 24px 0;
 }
 ul.table-of-contents li h3 {
   margin-bottom: 0;
+  display: initial;
 }
 ul.table-of-contents li p {
   margin-top: 0;
@@ -15359,8 +15361,7 @@ ul.table-of-contents ul {
   padding-left: 0;
 }
 ul.table-of-contents ul li {
-  margin-bottom: 8px;
-  margin-left: 15px;
+  margin: 0 0 8px 16px;
 }
 ul.table-of-contents ul li p {
   margin-top: 16px;
